# OpenFold

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json
.a11y/: constants.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
.specs/codebase/: TESTING.md
.specs/features/desktop-shell/: design.md  spec.md  tasks.md
.specs/features/game-rounds/: design.md  spec.md  tasks.md
.specs/features/guided-training/: design.md  spec.md  tasks.md
.specs/features/procedural-engine/: design.md  spec.md  tasks.md
.specs/features/rendering-3d/: design.md  spec.md  tasks.md
.specs/features/telemetry-analytics/: design.md  spec.md  tasks.md
.specs/hardening-release/: RELEASE_CHECKLIST.md  design.md  spec.md  tasks.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
crates/desktop/: Cargo.toml
crates/desktop/scripts/: measure.ps1  measure.sh  upgrade-sim.ps1
crates/desktop/src/: assets.rs  config.rs  ipc.rs  main.rs  protocol.rs  window.rs
docs/: desktop-parity-checklist.md
e2e/: a11y-audit.test.ts  fixtures.ts  placeholder.test.ts
e2e/config/: constants.ts  problems.ts
e2e/flows/: answer-round.test.ts  keyboard-only.test.ts  offline-persistence.test.ts  reduced-motion.test.ts  review-results.test.ts  round-setup.test.ts
perf/: memory.test.ts  placeholder.test.ts  profiler.ts
playwright-report/: index.html
scripts/: validate-release.sh
(+68 files in other folders)
