[package]
name = "openfold-desktop"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "openfold-desktop"
path = "src/main.rs"

[dependencies]
wry = "0.55"
tao = "0.35"
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
http = "1"
fs4 = { version = "0.13", features = ["sync"] }
rfd = "0.17"

[dev-dependencies]
tempfile = "3"
